# Peregrine

./: .gitattributes  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNAPSACK_DP_ALL3.cpp  LICENSE  Makefile  README.md  SECURITY.md  build-linux-full.sh  build.py  can_comp.cpp  can_comp.js.js  can_comp.js.pe  can_comp.pe  doc.pe  error.pe  meson.build  meson_options.txt
.github/: pull_request_template.md
.github/workflows/: build_meson.yml  build_with_v-second-try.yml  build_with_v.yml  build_with_vlang.yml
Peregrine/: .clang-format  Makefile  __init__.py  build-libtcc.sh  build.sh  builtin.h  builtin.hpp  builtin.pe  main.cpp  meson.build  peregrine  peregrine.py  peregrine.v  run_tests_ci.sh  test.pe  test.py  test_runner.py  v.mod
Peregrine/_dfc/: main.md
Peregrine/analyzer/: ast_validate.cpp  ast_validate.hpp  typeChecker.cpp  typeChecker.hpp
Peregrine/ast/: ast.cpp  ast.hpp  ast.v  types.cpp  types.hpp  visitor.cpp  visitor.hpp
Peregrine/clang/: cc1_main.cpp  cc1as_main.cpp  cc1gen_reproducer_main.cpp  driver.cpp  driver.hpp
Peregrine/cli/: cli.cpp  cli.hpp
Peregrine/codegen/: codegen.cpp  codegen.hpp  codegen.py  codegen.v  codegen_op.cpp  codegen_test.cpp  formatted_string.v  function.v  symbolTable.cpp  symbolTable.hpp  symbol_table.cpp  utils.cpp
Peregrine/codegen/cpp/: codegen.cpp  codegen.hpp  utils.cpp
Peregrine/codegen/js/: codegen.cpp  codegen.hpp  utils.cpp
Peregrine/docgen/html/: docgen.cpp  docgen.hpp
Peregrine/error_help/: e1.txt
Peregrine/errors/: error.hpp  error.md  error_list.py  errors.cpp  errors.hpp  errors.py
Peregrine/lexer/: lexer.cpp  lexer.h  lexer.hpp  lexer.l  lexer.py  lexer.v  lexer_re.cpp  lexer_re.hpp  lexer_test.cpp  tokens.cpp  tokens.hpp  tokens.py  type.v  utils.cpp
Peregrine/lexer/_dfc/: main.md
Peregrine/lexer/old/: lexer.py  tokens.py
Peregrine/lexer/states/: default.py  lexDS.py  string.py  template.txt
Peregrine/linker/: linker.cpp  linker.hpp
Peregrine/parser/: ast.py  ast_type.md  ccode.v  define.cpp  error_message.v  expression.cpp  function.v  literals.cpp  operator.v  parse_exp.cpp  parser.cpp  parser.hpp  parser.py  parser.v  parser_exp.cpp  parser_test.cpp  statement.cpp  tab.v  type.v  types.cpp  utils.cpp
Peregrine/pe_parser/: pe_ast.py  pe_parser.py
Peregrine/tests/: ccode.pe  f_r.pe  match_case.pe  sys.pe
Peregrine/tests/ci/: inline_asm.pe  pass.pe  string.pe  while.pe
Peregrine/tests/manual/: function.pe  if_else_match.pe  string.pe  type.pe
Peregrine/tokenizer/: process_tokens.v  tokenizer.v  tokens.v
Peregrine/utils/: symbolTable.cpp  symbolTable.hpp
Peregrine/vlibtcc/: vlibtcc.v
error_help/: e1.txt  e2.txt  e3.txt  e4.txt  e5.txt
examples/: add_number.pe  fibonacci.pe  hello_world.pe
graphics/: README.md
lib/: dictionary.hpp  list.hpp  string.hpp
platimum/: platinum.v
platimum/parser/: parser.v  tokenizer.v
platimum/process_tokens/: process_tokens.v
platimum/tokenizer/: process_token.v  process_tokens.v  tokenizer.v
public/: index.html
public/assets/css/: styles.min.css
public/assets/js/: script.min.js
swallow/: builtin.h  builtin.sw  example  example.sw  output  platinum.v  swallow  swallow.v  test  test_runner.py  v.mod
swallow/codegen/: codegen.v  formatted_string.v  function.v  variable.v
swallow/parser/: ast_type.md  ccode.v  error_message.v  error_xD.v  function.v  loop.v  operator.v  parser.v  tab.v  type.v
swallow/preprocessor/: formatter.v  import_parser.v  imports.v
swallow/tests/: if_else_match.sw  match_case.sw  new_line.sw  operation.sw  type.sw
swallow/tokenizer/: process_tokens.v  tokenizer.v
tests/: Makefile  bin_expr.pe  meson.build
tests/builtin/: colorprint.c  format.c
tests/compiler/: lexer_test.cpp  main.cpp  parser_test.cpp
tests/swallow/: empty.sw  str_formatting.sw
(+1 files in other folders)
